pointing to implementation of dynamic school website instance

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
     
     <!-- prize behind the curtin panel -->
     <div class="curtainPrize">
-      <!-- iframe src="https://thaschool.com/" width="480" height="360" frameBorder="0"  class="giphy-embed" allowFullScreen></iframe -->
       <img src="https://i.postimg.cc/XqtZ3ymq/Logo.png" style="height:300px;" />
       <p class="bunnies">Welcome to Our School!</p>
-      <p><a id="launcher" class="launcher" href="https://thaschool.com" title="Click to Enter Home Page"> Go To Our Home Page </a></p>
+      <p><a id="launcher" class="launcher" href="https://schoolwebsite.chwezi.tech" title="Click to Enter Home Page"> Go To Our Home Page </a></p>
     </div>
     
     <!-- right curtain panel -->
